// Vitest Snapshot v1

exports[`Superseding Adrs > should be able to supersede multiple records 1`] = `
"# 1. First Record

Date: 1992-01-12

## Status

Superseded by [3. Third Record](0003-third-record.md)

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;

exports[`Superseding Adrs > should be able to supersede multiple records 2`] = `
"# 2. Second Record

Date: 1992-01-12

## Status

Superseded by [3. Third Record](0003-third-record.md)

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;

exports[`Superseding Adrs > should be able to supersede multiple records 3`] = `
"# 3. Third Record

Date: 1992-01-12

## Status

Accepted

Supersedes [1. First Record](0001-first-record.md)

Supersedes [2. Second Record](0002-second-record.md)

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;

exports[`Superseding Adrs > should be able to supersede previous adrs 1`] = `
"# 1. First Record

Date: 1992-01-12

## Status

Superseded by [2. Second Record](0002-second-record.md)

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;

exports[`Superseding Adrs > should be able to supersede previous adrs 2`] = `
"# 2. Second Record

Date: 1992-01-12

## Status

Accepted

Supersedes [1. First Record](0001-first-record.md)

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;
